add fuzzuLogic feature

--- a/src/main/resources/shows.properties
+++ b/src/main/resources/shows.properties
@@ -157,7 +157,10 @@ Nashville#S05
 No.Limit#S03
 No.Limit#S04
 North.and.South
-#Once.Upon.A.Time
+Once.Upon.A.Time#S04
+Once.Upon.A.Time#S04*
+Once.Upon.A.Time#S05
+Once.Upon.A.Time#S05*
 One.Piece#73
 One.Piece#74
 One.Piece#75
