--- a/src/main/resources/shows.properties
+++ b/src/main/resources/shows.properties
@@ -27,16 +27,15 @@ Agent.Carter#S02
 Agent.X#S02
 Agent.X.US#S02
 #American.Crime.Story
-American.Dad#S11
+#American.Dad#S11
 #American.Horror.Story
-Angel.from.Hell
-Arrow#S04
+#Angel.from.Hell
 Arrow#S04
 Arthur
 Arthur*
 Banshee#S04
 Baskets
-Beauty.and.the.Beast.2012#S03
+#Beauty.and.the.Beast.2012#S03
 Being.Humans
 Being.Mary.Jane#S04
 Beowulf
@@ -46,15 +45,15 @@ Bitten#S04
 Bitten#S03
 Black.Sails#S04
 Black.Sails#S04*
-Black-ish
-Blue.seed
+#Black-ish
+#Blue.seed
 Colony#S03
 Colony#S02
 Colony#S01
 Cooper.Barrett
 Crazy.Ex.Girlfriend
-Criminal.Minds#S11
-Crossing.Lines
+#Criminal.Minds#S11
+#Crossing.Lines
 CSI
 CSI.NY
 Cult
@@ -62,10 +61,10 @@ Cult
 Dark.Matter#S02
 DC.s.Legends.of.Tomorrow
 DC's.Legends.of.Tomorrow
-Deutschland.83
+#Deutschland.83
 Devious.Maids#S04
-Dig
-Dominion
+#Dig
+#Dominion
 Dragon.Ball.Super
 Empire#S03
 Empire#S02
@@ -103,7 +102,7 @@ House.of.Cards#S05
 How.To.Get.Away.with.Murder#S02
 How.To.Get.Away.with.Murder#S03
 Hunter.X.Hunter
-Idiotsitter
+#Idiotsitter
 Infinite.Stratos
 Into.The.Badlands#S02
 Iron.Man
@@ -125,8 +124,8 @@ Lucifer#S01
 Lucifer#S02
 Madam.Secretary#S02
 Madam.Secretary#S03
-Madlax
-Madoff 
+#Madlax
+#Madoff 
 Manhattan#S02
 manhatten.love.story#S02
 Marco.Polo#S02
@@ -210,10 +209,10 @@ Supernatural#S11
 Supernatural#S12
 Teachers
 The.100#S03
-The.4400#S01
-The.4400#S02
-The.4400#S03
-The.4400#S04
+#The.4400#S01
+#The.4400#S02
+#The.4400#S03
+#The.4400#S04
 The.Americans
 The.Bastard.Executioner#S02
 the.blacklist#s03
@@ -264,8 +263,8 @@ War.and.Peace
 Wayward.Pines#S02
 Wayward.Pines#S03
 Wolf.Hall
-x.files#S10
-X-Files
+x.files#S11
+X-Files#S11
 You,.Me.And.The.Apocalypse#S02
 Zombieland#S03
 Trepalium
@@ -295,22 +294,22 @@ Fear.the.Walking.Dead#S02
 12.Monkeys#S02
 Roots
 Preacher
-White.Collar#s01
-White.Collar#s02
-White.Collar#s03
-White.Collar#s06
-White.Collar#s07
-White.Collar#s08
-White.Collar#s09
-Vikings#S03
+#White.Collar#s01
+#White.Collar#s02
+#White.Collar#s03
+#White.Collar#s06
+#White.Collar#s07
+#White.Collar#s08
+#White.Collar#s09
+#Vikings#S03
 Vikings#S04
 Vikings#S05
 the.tunnel*
 the.tunnel
 tunnel*
 tunnel
-Tom.Sawyer
-Tom.Sawyer*
+#Tom.Sawyer
+#Tom.Sawyer*
 Daredevil#S03
 American.Crime.Story#S01
 American.Crime.Story#S02
@@ -320,3 +319,7 @@ American.Horror.Story#S03
 American.Horror.Story#S04
 Single.Ladies
 American.Horror.Story#S05
+Ma.femme,.ses.enfants.et.moi#S01
+Ma.femme,.ses.enfants.et.moi#S02
+Ma.femme,.ses.enfants.et.moi#S01*
+Ma.femme,.ses.enfants.et.moi#S02*
