--- a/src/main/resources/shows.properties
+++ b/src/main/resources/shows.properties
@@ -56,7 +56,7 @@ Crazy.Ex.Girlfriend
 #Crossing.Lines
 CSI
 CSI.NY
-Cult
+#Cult
 #Da.Vincis.Demons
 Dark.Matter#S02
 DC.s.Legends.of.Tomorrow
@@ -213,7 +213,8 @@ The.100#S03
 #The.4400#S02
 #The.4400#S03
 #The.4400#S04
-The.Americans
+The.Americans#S03
+The.Americans#S04
 The.Bastard.Executioner#S02
 the.blacklist#s03
 The.Blacklist#S04
@@ -243,13 +244,12 @@ The.Romeo.Section
 the.Simpson#S27
 The.Strain#S03
 The.Vampire.Diaries#S07
-The.Walking.Dead#s05
 The.Walking.Dead#s06
+The.Walking.Dead#s07
 Toradora
 #Touch
 True.Detective#S03
 True.Justice
-Turn#S02*
 Turn#S03*
 Turn#S03
 Underground 
@@ -319,7 +319,16 @@ American.Horror.Story#S03
 American.Horror.Story#S04
 Single.Ladies
 American.Horror.Story#S05
-Ma.femme,.ses.enfants.et.moi#S01
+Ma.femme,.ses.enfants.et.moi#S03
+Ma.femme,.ses.enfants.et.moi#S04
 Ma.femme,.ses.enfants.et.moi#S02
+Ma.femme,.ses.enfants.et.moi#S01
 Ma.femme,.ses.enfants.et.moi#S01*
 Ma.femme,.ses.enfants.et.moi#S02*
+Ma.femme,.ses.enfants.et.moi#S03*
+Ma.femme,.ses.enfants.et.moi#S04*
+#The.Last.Man.on.Earth#S01
+The.Last.Man.on.Earth#S02
+The.Last.Man.on.Earth#S03
+Forever#S02*
+Forever#S02
