--- a/src/main/resources/shows.properties
+++ b/src/main/resources/shows.properties
@@ -1,150 +1,145 @@
-CSI
-CSI.NY
-Marvel's.Agents.of.S.H.I.E.L.D.#S03
-marvel|Marvel's.Agents.of.S.H.I.E.L.D.#S03
-Marvels.Agents.of.S.H.I.E.L.D#S03
-Marvel's.Agents.of.S.H.I.E.L.D#S03
-Marvels.Agents.of.S.H.I.E.L.D#S04
-Marvel's.Agents.of.S.H.I.E.L.D#S04
 #1864
 #A.to.Z
 #Allegiance
 #Ally.Mc.Beal
-#American.Odyssey
-#Beowulf.Return.to.the.Shieldlands
-#Borgia
-#Gossip.Girl
-#Hawaii.5-0
-#OZ
-#Parker.Lewis
-#Star.Wars.The.Clone.Wars
-#The.Big.Bang.Theory
-#THE.MENTALIST
-#The.Shield
-11/22/63
-11.22.63
-Agent.Carter#S02
-Agent.X#S02
-Agent.X.US#S02
 #American.Crime.Story
+#American.Crime.Story#S01
+#American.Crime.Story#S02
 #American.Dad#S11
+#American.Gothic#S02
+#American.Gothic#S03
 #American.Horror.Story
+#American.Horror.Story#S01
+#American.Horror.Story#S02
+#American.Horror.Story#S03
+#American.Horror.Story#S04
+#American.Horror.Story#S05
+#American.Odyssey
 #Angel.from.Hell
-Arrow#S04
-Arthur
-Arthur*
-Banshee#S04
-Baskets
+#Animal.Kingdom#S01
+#Animal.Kingdom#S02
+#Animal.Kingdom#S03
+#Another.Period
+#Arthur
+#Arthur*
+#Avengers
+#Avengers.Rassemblement
+#Avengers.Rassemblement*
+#Ballers#S02
+#Ballers#S02*
+#Banshee#S04
+#Baskets
 #Beauty.and.the.Beast.2012#S03
-Being.Humans
-Being.Mary.Jane#S04
-Beowulf
-Better.Call.Saul#S02
-Billions
-Bitten#S04
-Bitten#S03
-Black.Sails#S04
-Black.Sails#S04*
+#Being.Human
+#Being.Human*
+#Being.Humans
+#Being.Humans*
+#Beowulf
+#Beowulf.Return.to.the.Shieldlands
+#Bitten#S01
+#Bitten#S02
+#Bitten#S03
+#Bitten#S04
+#Blackish
 #Black-ish
+#Black-ish
+#Blackish*
+#Black-ish*
+#Blindspot#S01
+#Blindspot#S02
 #Blue.seed
-Colony#S03
-Colony#S02
-Colony#S01
-Cooper.Barrett
-Crazy.Ex.Girlfriend
+#Borgia
+#BrainDead
+#code.geass
+#code.geass*
+#Colony#S01
+#Crazy.Ex.Girlfriendf
 #Criminal.Minds#S11
 #Crossing.Lines
-CSI
-CSI.NY
+#CSI
+#CSI.NY
 #Cult
 #Da.Vincis.Demons
-Dark.Matter#S02
-DC.s.Legends.of.Tomorrow
-DC's.Legends.of.Tomorrow
 #Deutschland.83
-Devious.Maids#S04
+#Devious.Maids#S04
 #Dig
+#Doctor.who#S07
+#Doctor.who#S08
+#Doctor.who#S09
+#Doctor.who.2005#S07
+#Doctor.who.2005#S08
+#Doctor.who.2005#S09
 #Dominion
-Dragon.Ball.Super
-Empire#S03
-Empire#S02
-Empire.2015#S02
-Empire.2015#S03
-Extant#S03
-False.flag
-False.flag*
-Fargo#S02
-Fear.The.Walking.Dead#S02
-Final.Approach
-Final.Fantasy
-Freezing
-Full.Metal.Panic
-Galactik.Football
-Game.Of.Thrones#S06
-Game.Of.Thrones#S07
-Get.Backers
-Ghost.in.the.Shell
-Gotham#S02
-Gotham#S03
-Graceland#S02
-Gravion
-Greenleaf
-Groove.Adventure.Rave
-Gun.Smith.Cats
-Gundam.SEED.Destiny
-Hellsing
-Heroes.Reborn#S02
-High.School
-Homeland#S06
-Homeland#S07
-House.of.Cards#S04
-House.of.Cards#S05
-How.To.Get.Away.with.Murder#S02
-How.To.Get.Away.with.Murder#S03
-Hunter.X.Hunter
+#Empire#S03
+#Empire#S04
+#False.flag
+#False.flag*
+#Final.Approach
+#Final.Fantasy
+#Forever#S02
+#Forever#S02*
+#Full.Metal.Panic
+#Galactik.Football
+#Get.Backers
+#Ghost.in.the.Shell
+#Girl.Meets.World
+#GoodBehavior
+#Gossip.Girl
+#Gravion
+#Greenleaf
+#Groove.Adventure.Rave
+#Gun.Smith.Cats
+#Gundam.SEED.Destiny
+#Hawaii.5-0#S01
+#Hawaii.5-0#S01*
+#Hawaii.5-0#S02
+#Hawaii.5-0#S02*
+#Hawaii.5-0#S03
+#Hawaii.5-0#S03*
+#Hawaii.5-0#S04
+#Hawaii.5-0#S04*
+#Hawaii.5-0#S05
+#Hawaii.5-0#S05*
+#Hawaii.5-0#S06
+#Hawaii.5-0#S06*
+#Hell.On.Wheels#S01
+#Hell.On.Wheels#S02
+#Hell.On.Wheels#S03
+#Hell.On.Wheels#S04
+#Hell.On.Wheels#S05
+#Hell.On.Wheels#S06
+#Hell.On.Wheels#S07
+#Hell.On.Wheels#S08
+#Hemlock.Grove
+#Hemlock.Grove*
+#Heroes.Reborn#S02
+#High.School
+#House.of.Cards#S04
+#Hunter.X.Hunter
 #Idiotsitter
-Infinite.Stratos
-Into.The.Badlands#S02
-Iron.Man
-iZombie#S03
-Jane.The.Virgin
-Kaamelott
-KEN
-Kingdom
-Kong.King
-Ladies.vs.Butlers
-Les.Chroniques.de.Shannara#S02
-Les.Chroniques.de.Shannara#S02*
-Les.Gardiens.de.la.Galaxie*
-Les.Simpson#S27
-Limitless
-Limitless#S02
-London.Spy
-Lucifer#S01
-Lucifer#S02
-Madam.Secretary#S02
-Madam.Secretary#S03
+#Infinite.Stratos
+#Iron.Man
+#iZombie#S03
+#KEN
+#Killjoys#S01
+#Killjoys#S02
+#Kingdom
+#Kong.King
+#Kung.Fu.Panda
+#Les.Simpson#S27
+#Les.Simpson#S27*
+#Loin.de.chez.nous
+#London.Spy
+#Ma.femme,.ses.enfants.et.moi#S02
+#Ma.femme,.ses.enfants.et.moi#S02*
+#Ma.femme,.ses.enfants.et.moi#S03
+#Ma.femme,.ses.enfants.et.moi#S03*
+#Ma.femme,.ses.enfants.et.moi#S04
+#Ma.femme,.ses.enfants.et.moi#S04*
+#Madam.Secretary#S02
 #Madlax
-#Madoff 
-Manhattan#S02
-manhatten.love.story#S02
-Marco.Polo#S02
-Marvel.s.Agent.Carter#S02
-Marvel's.Agent.Carter#S02
-Marvel's.Agents.of.S.H.I.E.L.D.#S03
-marvel|Marvel's.Agents.of.S.H.I.E.L.D.#S03
-Marvels.Agents.of.S.H.I.E.L.D#S03
-Marvel's.Agents.of.S.H.I.E.L.D#S03
-Marvels.Agents.of.S.H.I.E.L.D#S04
-Marvel's.Agents.of.S.H.I.E.L.D#S04
-Marvels.Jessica.Jones#S02
-Mercy.Street
-Minority.Report#S02
-Mr.Robot#S02
-Narcos#S02
-Nashville#S03
-Nashville#S04
-Nashville#S05
+#Madoff.
+#manhatten.love.story#S02
 #NCIS#S11
 #NCIS#S12
 #NCIS#S13
@@ -152,148 +147,43 @@ Nashville#S05
 #NCIS.Los.Angeles#S07
 #NCIS.Los.Angeles#S08
 #NCIS.New.Orleans#S02
+#New.Blood
 #New.Girl#S04
-No.Limit#S03
-No.Limit#S04
-North.and.South
-Once.Upon.A.Time#S04
-Once.Upon.A.Time#S04*
-Once.Upon.A.Time#S05
-Once.Upon.A.Time#S05*
-One.Piece#73
-One.Piece#74
-One.Piece#75
-One.Piece#76
-One.Piece#77
-One.Piece#78
-One.Piece#79
-Orange.Is.The.New.Black#s04
-Outsiders
-Penny.Dreadful#S03
-Person.of.Interest#s04
-Power#S02
+#OZ
+#Parker.Lewis
+#Power#S02
 #Pretty.Little.Liars
-Quantico#S02
-Queen.s.Blade
-Ray.Donovan#S04
-Resurrection#s02
-Robot#S02
-Rush.Hour
-Sakura.Taisen
-Scandal#S05
-Scandal#S06
-Scandal.US#S05
-Scandal.US#S06
-Scorpion#S02
-Scorpion#S03
-Second.Chance.2016
-Sense8#S02
-Sense8#S03
-Shades.of.Blue
-Shadowhunters
-Shameless#S06
-Shameless.Uk
-Shameless.Us#S06
-Show.Me.A.Hero#S02
-Silicon.Valley#S02
-Sleepy.Hollow#S04
-Soul.Hunter
-Spiral.Suiri.no.Kizuna
-Star.Wars.Rebels#S02
-Star.Wars.Rebels#S02*
-Strange.Empire
-Supergirl
-Supergirl#S01
-Supergirl#S02
-Supernatural#S11
-Supernatural#S12
-Teachers
-The.100#S03
+#Soul.Hunter
+#Star.Wars.The.Clone.Wars
+#Strange.Empire
+#Supergirl
+#Supergirl#S01
+#Supernatural#S11
+#Teachers
 #The.4400#S01
 #The.4400#S02
 #The.4400#S03
 #The.4400#S04
-The.Americans#S03
-The.Americans#S04
-The.Bastard.Executioner#S02
-the.blacklist#s03
-The.Blacklist#S04
-The.Book.Of.Negroes#S02
-The.Expanse#S02
-the.expert.cyber#S02
-The.Flash#S02
-The.Flash#S03
-The.Flash.2014#S02
-The.Flash.2014#S03
-The.Frankenstein.Chronicles#S02
+#The.Big.Bang.Theory
+#The.Flash#S03
 #The.Heavy.Water.War
 #The.Interceptor
-The.Knick#S02
-The.Last.Kingdom
-The.Last.Ship#S03
-The.Leftovers
-The.Magicians
-The.Magicians.US
-The.Man.In.The.High.Castle#S02
-The.Messengers.2015#S02
-The.Musketeers#S03
-The.Originals#S03
-The.Player#S02
-The.Player.2015#S02
-The.Romeo.Section
-the.Simpson#S27
-The.Strain#S03
-The.Vampire.Diaries#S07
-The.Walking.Dead#s06
-The.Walking.Dead#s07
-Toradora
+#The.Last.Man.on.Earth#S01
+#The.Last.Man.on.Earth#S02
+#The.Last.Ship#S03
+#THE.MENTALIST
+#The.Shield
+#Tom.Sawyer
+#Tom.Sawyer*
 #Touch
-True.Detective#S03
-True.Justice
-Turn#S03*
-Turn#S03
-Underground 
-Vampire.Diaries#S07
-Vandread
-Veep
-Versailles#S02
+#Tyrant#S01
+#Tyrant#S02
 #Versailles.2015
-War.and.Peace
+#Vikings#S01
+#Vikings#S02
+#Vikings#S03
+#Vikings#S03
 #War.and.Peace
-Wayward.Pines#S02
-Wayward.Pines#S03
-Wolf.Hall
-x.files#S11
-X-Files#S11
-You,.Me.And.The.Apocalypse#S02
-Zombieland#S03
-Trepalium
-Underground
-Hemlock.Grove
-Hemlock.Grove*
-11.22.63
-Haven
-Hell.On.Wheels#S01
-Hell.On.Wheels#S02
-Hell.On.Wheels#S03
-Hell.On.Wheels#S04
-Hell.On.Wheels#S05
-Hell.On.Wheels#S06
-Hell.On.Wheels#S07
-Hell.On.Wheels#S08
-Jericho
-Wanted
-Dragons
-Underground
-Avengers
-Avengers.Rassemblement
-Avengers.Rassemblement*
-The.Path
-Outlander
-Fear.the.Walking.Dead#S02
-12.Monkeys#S02
-Roots
-Preacher
 #White.Collar#s01
 #White.Collar#s02
 #White.Collar#s03
@@ -301,34 +191,313 @@ Preacher
 #White.Collar#s07
 #White.Collar#s08
 #White.Collar#s09
-#Vikings#S03
-Vikings#S04
-Vikings#S05
-the.tunnel*
-the.tunnel
-tunnel*
-tunnel
-#Tom.Sawyer
-#Tom.Sawyer*
+11.22.63#S02
+11.22.63#S03
+11/22/63#S02
+12.Monkeys#S04
+12.Monkeys#S05
+Agent.Carter#S02
+Agent.Carter#S03
+Agent.X#S02
+Agent.X.US#S02
+Aquarius#S01
+Aquarius#S02
+Arrow#S05
+Arrow#S06
+Ash.vs.Evil.Dead#S02
+Atlanta.2016
+BattleBots
+Being.Mary.Jane#S03
+Being.Mary.Jane#S04
+#Better.Call.Saul#S03
+#Between
+#Big.Brother
+Billions
+Black.ish
+Black.ish*
+black.mirror*
+black.mirrors*
+Black.Sails#S04
+Black.Sails#S04*
+Black.Sails#S05
+Black.Sails#S05*
+Black.Mirror
+Blindspot#S03
+Botched
+Casual
+Chance
+Close.to.the.Enemy
+Colony#S02
+Colony#S03
+#Comedians.in.Cars.Getting.Coffee
+#Cooper.Barrett
 Daredevil#S03
-American.Crime.Story#S01
-American.Crime.Story#S02
-American.Horror.Story#S01
-American.Horror.Story#S02
-American.Horror.Story#S03
-American.Horror.Story#S04
+Dark.Matter#S03
+DC.s.Legends.of.Tomorrow#S02
+DC's.Legends.of.Tomorrow#S02
+Dead.of.Summer
+Designated.Survivor
+Devious.Maids#S05
+Dragon.Ball.Super
+Dragons
+Dragons*
+Empire.2015#S03
+Empire.2015#S04
+Extant#S03
+Fargo#S03
+Fear.The.Walking.Dead#S02
+Fear.the.Walking.Dead#S03
+#Feed.The.Beast
+Freezing
+Frequency
+Frontier
+Frozen.planet
+Game.Of.Thrones#S07
+#Gardien.of.galaxy*
+#gomorra
+Gotham#S03
+Graceland#S02
+Guilt
+Haven
+Hellsing
+Homeland#S06
+Homeland#S07
+House.of.Cards#S05
+How.To.Get.Away.with.Murder#S03
+How.To.Get.Away.with.Murder#S03*
+How.To.Get.Away.with.Murder#S04
+Into.The.Badlands#S02
+Jane.The.Virgin
+Jericho*
+Kaamelott
+Kung.Fu.Panda*
+Ladies.vs.Butlers
+Les.Chroniques.de.Shannara#S02
+Les.Chroniques.de.Shannara#S02*
+Les.Gardiens.de.la.Galaxie*
+Les.Simpson#S28
+Les.Simpson#S28*
+Limitless#S02
+Lucifer#S02
+Luke.Cage#S02
+MacGyver.2016
+Madam.Secretary#S03
+Manhattan#S02
+Marco.Polo#S03
+Marco.Polo#S03*
+Marseille#S02
+Marseille#S02*
+Marvel.s.Agent.Carter#S03
+marvel|Marvel's.Agents.of.S.H.I.E.L.D#S04
+Marvel's.Agent.Carter#S03
+Marvels.Agents.of.S.H.I.E.L.D#S04
+Marvels.Agents.of.S.H.I.E.L.D#S04
+Marvel's.Agents.of.S.H.I.E.L.D#S04
+Marvel's.Agents.of.S.H.I.E.L.D#S04
+Marvel's.Agents.of.S.H.I.E.L.D#S04
+Marvels.Agents.of.S.H.I.E.L.D#S05
+Marvel's.Agents.of.S.H.I.E.L.D#S05
+Marvels.Jessica.Jones#S02
+Marvel's.Luke.Cage#S02
+#Mercy.Street
+Minority.Report#S02
+Mr.Robot#S03
+Narcos#S03
+Nashville#S03
+Nashville#S04
+Nashville#S05
+#New.Girl#S01
+#New.Girl#S01*
+#New.Girl#S02
+#New.Girl#S02*
+#New.Girl#S03
+#New.Girl#S03*
+New.Girl#S04
+New.Girl#S04*
+New.Girl#S05
+New.Girl#S05*
+New.Girl#S06
+New.Girl#S06*
+No.Limit#S04
+No.Limit#S05
+North.and.South
+#Once.Upon.A.Time#S01
+#Once.Upon.A.Time#S02
+#Once.Upon.A.Time#S03
+#Once.Upon.A.Time#S04*
+#Once.Upon.A.Time#S04
+#Once.Upon.A.Time#S05*
+#Once.Upon.A.Time#S05
+Once.Upon.A.Time#S06
+Once.Upon.A.Time#S06*
+Once.Upon.A.Time#S07
+Once.Upon.A.Time#S07*
+One.Piece#7
+One.Piece#8
+One.Piece#9
+Orange.Is.The.New.Black#s05
+Orange.Is.The.New.Black#s06
+Orange.Is.The.New.Black#s07
+Outcast
+Outlander
+Outsiders
+Penny.Dreadful#S03
+Person.of.Interest#s04
+Power#S03
+Power#S03
+Power#S04
+#Powers#S02
+#Powers#S02*
+#Powers#S03
+Preacher#S02
+Prison.Break#S05
+Quantico#S02
+Queen.of.the.South
+Queen.s.Blade
+Ray.Donovan#S05
+Regular.Show
+Resurrection#s02
+#Revolution#S01
+#Revolution#S02
+Roadies
+Robot#S03
+Roots
+Rush.Hour
+Sakura.Taisen
+Salem#S02
+#Scandal#S05
+Scandal#S06
+#Scandal.US#S05
+Scandal.US#S06
+Scorpion#S03
+Scorpion#S04
+#Second.Chance
+#Second.Chance*
+#Second.Chance.2016
+#Second.Chance.2016*
+Section.Zero
+Sense8#S02
+Sense8#S03
+Shades.of.Blue
+#Shadowhunters
+Shadowhunters
+Shameless#S07
+Shameless.Us#S07
+ShooterTv
+Show.Me.A.Hero#S02
+Silicon.Valley#S03
 Single.Ladies
-American.Horror.Story#S05
-Ma.femme,.ses.enfants.et.moi#S03
-Ma.femme,.ses.enfants.et.moi#S04
-Ma.femme,.ses.enfants.et.moi#S02
-Ma.femme,.ses.enfants.et.moi#S01
-Ma.femme,.ses.enfants.et.moi#S01*
-Ma.femme,.ses.enfants.et.moi#S02*
-Ma.femme,.ses.enfants.et.moi#S03*
-Ma.femme,.ses.enfants.et.moi#S04*
-#The.Last.Man.on.Earth#S01
-The.Last.Man.on.Earth#S02
+#Sleepy.Hollow#S03
+#Sleepy.Hollow#S03*
+#Sleepy.Hollow#S04
+Spiral.Suiri.no.Kizuna
+Star.Wars.Rebels#S03
+Star.Wars.Rebels#S03*
+Star.Wars.Rebels#S04
+Star.Wars.Rebels#S04*
+StartUp
+State.of.Affairs
+State.of.Affairs*
+Steven.Universe
+Stranger.Things#S02
+Stranger.Things#S03
+Supergirl#S02
+Supernatural#S12
+SweetVicious
+Terminator
+The.100#S04
+The.Americans#S03
+The.Americans#S04
+The.Bastard.Executioner#S02
+The.Blacklist#S04
+The.Book.Of.Negroes#S02
+The.Expanse#S02
+the.expert.cyber#S02
+The.Flash.2014#S03
+The.Frankenstein.Chronicles#S02
+The.Jim.Gaffigan.Show
+The.Knick#S02
+The.Last.Kingdom
 The.Last.Man.on.Earth#S03
-Forever#S02*
-Forever#S02
+The.Last.Man.on.Earth#S04
+#The.Last.Ship#S04
+The.Last.Ship#S05
+The.Leftovers
+The.Living.and.the.Dead
+The.Magicians#S02
+The.Magicians.US#S02
+The.Man.In.The.High.Castle#S02
+The.Messengers.2015#S02
+#The.Musketeers#S03
+#The.Night.Of
+The.Night.Of
+The.Originals#S03
+The.Path
+The.Player#S02
+The.Player.2015#S02
+The.Romeo.Section
+#the.Simpson#S27
+The.Strain#S05
+The.Strain#S04
+#the.tunnel#S02
+#the.tunnel#S02*
+The.Vampire.Diaries#S07
+The.Walking.Dead#s07
+The.Walking.Dead#s08
+The.Young.Pope
+The.Young.Pope*
+Timeless 
+Tomorrow.When.the.War.Began
+Toradora
+Travelers
+Trepalium
+True.Detective#S03
+True.Justice*
+#tunnel#S03
+#tunnel#S03*
+Turn#S04
+Turn#S04*
+Turn#S05
+Turn#S05*
+Tyrant#S03
+Tyrant#S04
+Underground#S02
+Vampire.Diaries#S07
+Van.Helsing#S01
+Van.Helsing#S02
+Van.Helsing#S03
+Vandread
+#Veep
+Versailles#S02
+Vice.Principals
+#Vikings#S04
+Vikings#S05
+Vikings#S06
+Wanted
+War.and.Peace#S02
+War.and.Peace#S03
+#Wayward.Pines#S02
+#Wayward.Pines#S03
+Westworld
+Wolf.Hall
+Wrecked
+Wynonna.Earp
+#x.files#S11
+#X-Files#S11
+You,.Me.And.The.Apocalypse#S02
+#You're.The.Worst#S01
+#You're.The.Worst#S02
+#You're.The.Worst#S03
+#You're.The.Worst#S04
+#Z.nation#S01
+#Z.nation#S02
+Z.nation#S03
+Zombieland#S03
+#Zoo#S02
+Zoo#S03
+Shooter
+3%
+1600.Penn#S01
+1600.Penn#S02
+1600.Penn#S03
+1600.Penn#S04
