--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ shows.properties.file=shows.properties
 torrent.root.folder=G:/Telechargement/
 torrent.root.folder.new=torrentsNew
 torrent.root.folder.old=torrents
-site.url.search =http://www.torrent9.biz/search_torrent/,http://www.cpasbien.cm/recherche/series/
-site.url.search.vostfr =http://www.torrent9.biz/search_torrent/,http://www.cpasbien.cm/recherche/series-vostfr/
+site.url.search =http://www.torrent9.biz/search_torrent/series/,http://www.cpasbien.cm/recherche/series/
+site.url.search.vostfr =http://www.torrent9.biz/search_torrent/series/,http://www.cpasbien.cm/recherche/series-vostfr/
