fix cpas ... url query issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #site.url=http://www.cpasbien.cm/derniers-torrents.php?filtre/=series
 site.url=http://www.cpasbien.cm/view_cat.php?categorie=series
 site.url.root=http://www.torrent9.biz/,http://www.cpasbien.cm
-logging.file=logs/torrentdl.log
+logging.file=target/logs/torrentdl.log
 shows.properties.file=shows.properties
 torrent.root.folder=G:/Telechargement/
 torrent.root.folder.new=torrentsNew
