--- a/src/main/resources/shows.properties
+++ b/src/main/resources/shows.properties
@@ -241,6 +241,7 @@ Devious.Maids#S05
 Dragon.Ball.Super
 Dragons
 Dragons*
+Downtown.abbey
 Empire.2015#S03
 Empire.2015#S04
 Extant#S03
@@ -291,8 +292,6 @@ Marvel.s.Agent.Carter#S03
 marvel|Marvel's.Agents.of.S.H.I.E.L.D#S04
 Marvel's.Agent.Carter#S03
 Marvels.Agents.of.S.H.I.E.L.D#S04
-Marvels.Agents.of.S.H.I.E.L.D#S04
-Marvel's.Agents.of.S.H.I.E.L.D#S04
 Marvel's.Agents.of.S.H.I.E.L.D#S04
 Marvel's.Agents.of.S.H.I.E.L.D#S04
 Marvels.Agents.of.S.H.I.E.L.D#S05
@@ -339,8 +338,8 @@ Orange.Is.The.New.Black#s05
 Orange.Is.The.New.Black#s06
 Orange.Is.The.New.Black#s07
 Outcast
-Outlander
-Outsiders
+#Outlander
+#Outsiders
 Penny.Dreadful#S03
 Person.of.Interest#s04
 Power#S03
@@ -371,10 +370,6 @@ Scandal#S06
 Scandal.US#S06
 Scorpion#S03
 Scorpion#S04
-#Second.Chance
-#Second.Chance*
-#Second.Chance.2016
-#Second.Chance.2016*
 Section.Zero
 Sense8#S02
 Sense8#S03
@@ -470,7 +465,7 @@ Vandread
 #Veep
 Versailles#S02
 Vice.Principals
-#Vikings#S04
+Vikings#S04
 Vikings#S05
 Vikings#S06
 Wanted
@@ -496,8 +491,34 @@ Zombieland#S03
 #Zoo#S02
 Zoo#S03
 Shooter
-3%
-1600.Penn#S01
-1600.Penn#S02
-1600.Penn#S03
-1600.Penn#S04
+3.%
+3.Percent
+L.Exorciste#S01
+Prison.break#S04*
+Prison.break#S05*
+Prison.break#S04
+Prison.break#S05
+Childhood.s.End
+EMERALD.CITY
+Taboo
+American.Gods
+RIVERDALE
+POWERLESS
+24.LEGACY
+Legion
+Marvel.s.IRON.FIST
+STAR.TREK.DISCOVERY
+titans
+Marvel.IRON.FIST
+Peaky.blinders#S01
+Peaky.blinders#S02
+Peaky.blinders#S03
+Peaky.blinders#S04
+The.Blacklist.Redemption
+The.Last.Kingdom
+Trolls.Hunters
+Trolls*
+Boston.Legal#S06
+Boston.Legal#S07
+Skam
+The.Get.Down
