--- a/src/main/resources/shows.properties
+++ b/src/main/resources/shows.properties
@@ -298,6 +298,12 @@ Marvels.Agents.of.S.H.I.E.L.D#S05
 Marvel's.Agents.of.S.H.I.E.L.D#S05
 Marvels.Jessica.Jones#S02
 Marvel's.Luke.Cage#S02
+Marvel#S01
+Marvel#S02
+Marvel#S03
+Marvel#S04
+Marvel#S05
+Marvel#S06
 #Mercy.Street
 Minority.Report#S02
 Mr.Robot#S03
@@ -441,7 +447,7 @@ The.Walking.Dead#s07
 The.Walking.Dead#s08
 The.Young.Pope
 The.Young.Pope*
-Timeless 
+Timeless.
 Tomorrow.When.the.War.Began
 Toradora
 Travelers
@@ -491,7 +497,7 @@ Zombieland#S03
 #Zoo#S02
 Zoo#S03
 Shooter
-3.%
+#3.%
 3.Percent
 L.Exorciste#S01
 Prison.break#S04*
@@ -518,7 +524,27 @@ The.Blacklist.Redemption
 The.Last.Kingdom
 Trolls.Hunters
 Trolls*
-Boston.Legal#S06
-Boston.Legal#S07
 Skam
 The.Get.Down
+Being.Mary.Jane#S03
+Being.Mary.Jane#S04
+Being.Mary.Jane#S03*
+Being.Mary.Jane#S04*
+arme.fatale
+James.Bond*.
+Incorporated
+Six
+Madiba
+Powerless
+Training.Day
+24.Legacy
+Legion
+The.Blacklist.Redemption
+BULL.2016
+BULL.2016*
+BULL
+THE.WITNESS.FOR.THE.PROSECUTION
+Taboo
+MASTER.OF.NONE
+CATASTROPHE
+JANE.THE.VIRGIN
