--- a/src/main/resources/shows.properties
+++ b/src/main/resources/shows.properties
@@ -1,4 +1,5 @@
 #1864
+#3.%
 #A.to.Z
 #Allegiance
 #Ally.Mc.Beal
@@ -36,6 +37,9 @@
 #Being.Humans*
 #Beowulf
 #Beowulf.Return.to.the.Shieldlands
+#Better.Call.Saul#S03
+#Between
+#Big.Brother
 #Bitten#S01
 #Bitten#S02
 #Bitten#S03
@@ -53,6 +57,8 @@
 #code.geass
 #code.geass*
 #Colony#S01
+#Comedians.in.Cars.Getting.Coffee
+#Cooper.Barrett
 #Crazy.Ex.Girlfriendf
 #Criminal.Minds#S11
 #Crossing.Lines
@@ -74,15 +80,18 @@
 #Empire#S04
 #False.flag
 #False.flag*
+#Feed.The.Beast
 #Final.Approach
 #Final.Fantasy
 #Forever#S02
 #Forever#S02*
 #Full.Metal.Panic
 #Galactik.Football
+#Gardien.of.galaxy*
 #Get.Backers
 #Ghost.in.the.Shell
 #Girl.Meets.World
+#gomorra
 #GoodBehavior
 #Gossip.Girl
 #Gravion
@@ -140,6 +149,7 @@
 #Madlax
 #Madoff.
 #manhatten.love.story#S02
+#Mercy.Street
 #NCIS#S11
 #NCIS#S12
 #NCIS#S13
@@ -148,11 +158,37 @@
 #NCIS.Los.Angeles#S08
 #NCIS.New.Orleans#S02
 #New.Blood
+#New.Girl#S01
+#New.Girl#S01*
+#New.Girl#S02
+#New.Girl#S02*
+#New.Girl#S03
+#New.Girl#S03*
 #New.Girl#S04
+#Once.Upon.A.Time#S01
+#Once.Upon.A.Time#S02
+#Once.Upon.A.Time#S03
+#Once.Upon.A.Time#S04
+#Once.Upon.A.Time#S04*
+#Once.Upon.A.Time#S05
+#Once.Upon.A.Time#S05*
+#Outlander
+#Outsiders
 #OZ
 #Parker.Lewis
 #Power#S02
+#Powers#S02
+#Powers#S02*
+#Powers#S03
 #Pretty.Little.Liars
+#Revolution#S01
+#Revolution#S02
+#Scandal#S05
+#Scandal.US#S05
+#Shadowhunters
+#Sleepy.Hollow#S03
+#Sleepy.Hollow#S03*
+#Sleepy.Hollow#S04
 #Soul.Hunter
 #Star.Wars.The.Clone.Wars
 #Strange.Empire
@@ -171,19 +207,30 @@
 #The.Last.Man.on.Earth#S01
 #The.Last.Man.on.Earth#S02
 #The.Last.Ship#S03
+#The.Last.Ship#S04
 #THE.MENTALIST
+#The.Musketeers#S03
+#The.Night.Of
 #The.Shield
+#the.Simpson#S27
+#the.tunnel#S02
+#the.tunnel#S02*
 #Tom.Sawyer
 #Tom.Sawyer*
 #Touch
+#tunnel#S03
+#tunnel#S03*
 #Tyrant#S01
 #Tyrant#S02
+#Veep
 #Versailles.2015
 #Vikings#S01
 #Vikings#S02
 #Vikings#S03
 #Vikings#S03
 #War.and.Peace
+#Wayward.Pines#S02
+#Wayward.Pines#S03
 #White.Collar#s01
 #White.Collar#s02
 #White.Collar#s03
@@ -191,15 +238,28 @@
 #White.Collar#s07
 #White.Collar#s08
 #White.Collar#s09
+#x.files#S11
+#X-Files#S11
+#You're.The.Worst#S01
+#You're.The.Worst#S02
+#You're.The.Worst#S03
+#You're.The.Worst#S04
+#Z.nation#S01
+#Z.nation#S02
+#Zoo#S02
 11.22.63#S02
 11.22.63#S03
 11-22-63#S02
 12.Monkeys#S04
 12.Monkeys#S05
-Agent.Carter#S02
+24.Legacy
+24-Legacy
+24:Legacy
+3.Percent
 Agent.Carter#S03
 Agent.X#S02
 Agent.X.US#S02
+American.Gods
 Aquarius#S01
 Aquarius#S02
 Arrow#S05
@@ -208,29 +268,33 @@ Ash.vs.Evil.Dead#S02
 Atlanta.2016
 BattleBots
 Being.Mary.Jane#S03
+Being.Mary.Jane#S03
+Being.Mary.Jane#S03*
 Being.Mary.Jane#S04
-#Better.Call.Saul#S03
-#Between
-#Big.Brother
+Being.Mary.Jane#S04
+Being.Mary.Jane#S04*
 Billions
 Black.ish
 Black.ish*
+Black.Mirror
 black.mirror*
 black.mirrors*
 Black.Sails#S04
 Black.Sails#S04*
 Black.Sails#S05
 Black.Sails#S05*
-Black.Mirror
 Blindspot#S03
 Botched
+BULL
+BULL.2016
+BULL.2016*
 Casual
+CATASTROPHE
 Chance
+Childhood.s.End
 Close.to.the.Enemy
 Colony#S02
 Colony#S03
-#Comedians.in.Cars.Getting.Coffee
-#Cooper.Barrett
 Daredevil#S03
 Dark.Matter#S03
 DC.s.Legends.of.Tomorrow#S02
@@ -238,24 +302,21 @@ DC's.Legends.of.Tomorrow#S02
 Dead.of.Summer
 Designated.Survivor
 Devious.Maids#S05
+Downtown.abbey
 Dragon.Ball.Super
 Dragons
 Dragons*
-Downtown.abbey
+EMERALD.CITY
 Empire.2015#S03
 Empire.2015#S04
 Extant#S03
 Fargo#S03
-Fear.The.Walking.Dead#S02
 Fear.the.Walking.Dead#S03
-#Feed.The.Beast
 Freezing
 Frequency
 Frontier
 Frozen.planet
 Game.Of.Thrones#S07
-#Gardien.of.galaxy*
-#gomorra
 Gotham#S03
 Graceland#S02
 Guilt
@@ -267,28 +328,41 @@ House.of.Cards#S05
 How.To.Get.Away.with.Murder#S03
 How.To.Get.Away.with.Murder#S03*
 How.To.Get.Away.with.Murder#S04
+Incorporated
 Into.The.Badlands#S02
+James.Bond*.
 Jane.The.Virgin
 Jericho*
 Kaamelott
 Kung.Fu.Panda*
+Exorciste#S01
 Ladies.vs.Butlers
+Legion
 Les.Chroniques.de.Shannara#S02
 Les.Chroniques.de.Shannara#S02*
 Les.Gardiens.de.la.Galaxie*
 Les.Simpson#S28
 Les.Simpson#S28*
-Limitless#S02
 Lucifer#S02
 Luke.Cage#S02
 MacGyver.2016
 Madam.Secretary#S03
+Madiba
 Manhattan#S02
 Marco.Polo#S03
 Marco.Polo#S03*
 Marseille#S02
 Marseille#S02*
+Marvel#S01
+Marvel#S02
+Marvel#S03
+Marvel#S04
+Marvel#S05
+Marvel#S06
+Marvel.IRON.FIST
+Marvel.IRON.FIST*
 Marvel.s.Agent.Carter#S03
+Marvel.s.IRON.FIST
 marvel|Marvel's.Agents.of.S.H.I.E.L.D#S04
 Marvel's.Agent.Carter#S03
 Marvels.Agents.of.S.H.I.E.L.D#S04
@@ -298,41 +372,15 @@ Marvels.Agents.of.S.H.I.E.L.D#S05
 Marvel's.Agents.of.S.H.I.E.L.D#S05
 Marvels.Jessica.Jones#S02
 Marvel's.Luke.Cage#S02
-Marvel#S01
-Marvel#S02
-Marvel#S03
-Marvel#S04
-Marvel#S05
-Marvel#S06
-#Mercy.Street
-Minority.Report#S02
+MASTER.OF.NONE
 Mr.Robot#S03
 Narcos#S03
 Nashville#S03
 Nashville#S04
 Nashville#S05
-#New.Girl#S01
-#New.Girl#S01*
-#New.Girl#S02
-#New.Girl#S02*
-#New.Girl#S03
-#New.Girl#S03*
-New.Girl#S04
-New.Girl#S04*
-New.Girl#S05
-New.Girl#S05*
-New.Girl#S06
-New.Girl#S06*
 No.Limit#S04
 No.Limit#S05
 North.and.South
-#Once.Upon.A.Time#S01
-#Once.Upon.A.Time#S02
-#Once.Upon.A.Time#S03
-#Once.Upon.A.Time#S04*
-#Once.Upon.A.Time#S04
-#Once.Upon.A.Time#S05*
-#Once.Upon.A.Time#S05
 Once.Upon.A.Time#S06
 Once.Upon.A.Time#S06*
 Once.Upon.A.Time#S07
@@ -344,54 +392,52 @@ Orange.Is.The.New.Black#s05
 Orange.Is.The.New.Black#s06
 Orange.Is.The.New.Black#s07
 Outcast
-#Outlander
-#Outsiders
+#Peaky.blinders#S01
+#Peaky.blinders#S02
+Peaky.blinders#S03
+Peaky.blinders#S04
 Penny.Dreadful#S03
 Person.of.Interest#s04
-Power#S03
-Power#S03
+#Power#S03
 Power#S04
-#Powers#S02
-#Powers#S02*
-#Powers#S03
+Powerless
 Preacher#S02
 Prison.Break#S05
+Prison.break#S05*
 Quantico#S02
 Queen.of.the.South
 Queen.s.Blade
 Ray.Donovan#S05
 Regular.Show
 Resurrection#s02
-#Revolution#S01
-#Revolution#S02
+#RIVERDALE
 Roadies
 Robot#S03
 Roots
 Rush.Hour
 Sakura.Taisen
 Salem#S02
-#Scandal#S05
 Scandal#S06
-#Scandal.US#S05
 Scandal.US#S06
 Scorpion#S03
 Scorpion#S04
 Section.Zero
 Sense8#S02
 Sense8#S03
-Shades.of.Blue
-#Shadowhunters
+#Shades.of.Blue
 Shadowhunters
 Shameless#S07
 Shameless.Us#S07
-ShooterTv
+Shooter
+Shooter.Tv
 Show.Me.A.Hero#S02
 Silicon.Valley#S03
 Single.Ladies
-#Sleepy.Hollow#S03
-#Sleepy.Hollow#S03*
-#Sleepy.Hollow#S04
+Six
+Skam
 Spiral.Suiri.no.Kizuna
+STAR.TREK.DISCOVERY
+STAR.TREK.DISCOVERY*
 Star.Wars.Rebels#S03
 Star.Wars.Rebels#S03*
 Star.Wars.Rebels#S04
@@ -403,25 +449,37 @@ Steven.Universe
 Stranger.Things#S02
 Stranger.Things#S03
 Supergirl#S02
+Supergirl#S03
 Supernatural#S12
 SweetVicious
+Taboo
+Ugly.Betty#S01
+Ugly.Betty#S02
+Ugly.Betty#S03
+Ugly.Betty#S04
+Ugly.Betty#S01*
+Ugly.Betty#S02*
+Ugly.Betty#S03*
+Ugly.Betty#S04*
 Terminator
 The.100#S04
 The.Americans#S03
 The.Americans#S04
 The.Bastard.Executioner#S02
 The.Blacklist#S04
+The.Blacklist.Redemption
+The.Blacklist.Redemption
 The.Book.Of.Negroes#S02
 The.Expanse#S02
 the.expert.cyber#S02
 The.Flash.2014#S03
 The.Frankenstein.Chronicles#S02
+The.Get.Down
 The.Jim.Gaffigan.Show
 The.Knick#S02
 The.Last.Kingdom
 The.Last.Man.on.Earth#S03
 The.Last.Man.on.Earth#S04
-#The.Last.Ship#S04
 The.Last.Ship#S05
 The.Leftovers
 The.Living.and.the.Dead
@@ -429,33 +487,34 @@ The.Magicians#S02
 The.Magicians.US#S02
 The.Man.In.The.High.Castle#S02
 The.Messengers.2015#S02
-#The.Musketeers#S03
-#The.Night.Of
 The.Night.Of
 The.Originals#S03
+The.Pacific
 The.Path
 The.Player#S02
 The.Player.2015#S02
 The.Romeo.Section
-#the.Simpson#S27
-The.Strain#S05
 The.Strain#S04
-#the.tunnel#S02
-#the.tunnel#S02*
+The.Strain#S05
 The.Vampire.Diaries#S07
 The.Walking.Dead#s07
 The.Walking.Dead#s08
+THE.WITNESS.FOR.THE.PROSECUTION
 The.Young.Pope
 The.Young.Pope*
-Timeless.
+This.Is.Us
+Timeless
+titans
 Tomorrow.When.the.War.Began
 Toradora
-Travelers
+Training.Day
+Travelers#S01
+Travelers#S03
 Trepalium
+Trolls*
+Trolls.Hunters
 True.Detective#S03
 True.Justice*
-#tunnel#S03
-#tunnel#S03*
 Turn#S04
 Turn#S04*
 Turn#S05
@@ -468,83 +527,25 @@ Van.Helsing#S01
 Van.Helsing#S02
 Van.Helsing#S03
 Vandread
-#Veep
 Versailles#S02
 Vice.Principals
-Vikings#S04
+#Vikings#S04
 Vikings#S05
 Vikings#S06
 Wanted
 War.and.Peace#S02
 War.and.Peace#S03
-#Wayward.Pines#S02
-#Wayward.Pines#S03
 Westworld
 Wolf.Hall
 Wrecked
 Wynonna.Earp
-#x.files#S11
-#X-Files#S11
+X.Company#S01
+X.Company#S02
+X.Company#S03 
 You,.Me.And.The.Apocalypse#S02
-#You're.The.Worst#S01
-#You're.The.Worst#S02
-#You're.The.Worst#S03
-#You're.The.Worst#S04
-#Z.nation#S01
-#Z.nation#S02
 Z.nation#S03
 Zombieland#S03
-#Zoo#S02
 Zoo#S03
-Shooter
-#3.%
-3.Percent
-L.Exorciste#S01
-Prison.break#S04*
-Prison.break#S05*
-Prison.break#S04
-Prison.break#S05
-Childhood.s.End
-EMERALD.CITY
-Taboo
-American.Gods
-RIVERDALE
-POWERLESS
-24.LEGACY
-Legion
-Marvel.s.IRON.FIST
-STAR.TREK.DISCOVERY
-titans
-Marvel.IRON.FIST
-Peaky.blinders#S01
-Peaky.blinders#S02
-Peaky.blinders#S03
-Peaky.blinders#S04
-The.Blacklist.Redemption
-The.Last.Kingdom
-Trolls.Hunters
-Trolls*
-Skam
-The.Get.Down
-Being.Mary.Jane#S03
-Being.Mary.Jane#S04
-Being.Mary.Jane#S03*
-Being.Mary.Jane#S04*
-arme.fatale
-James.Bond*.
-Incorporated
-Six
-Madiba
-Powerless
-Training.Day
-24.Legacy
-Legion
-The.Blacklist.Redemption
-BULL.2016
-BULL.2016*
-BULL
-THE.WITNESS.FOR.THE.PROSECUTION
-Taboo
-MASTER.OF.NONE
-CATASTROPHE
-JANE.THE.VIRGIN
+Samourai
+Samourai.Jack
+Caprica
