--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #site.url=http://www.cpasbien.cm/derniers-torrents.php?filtre/=series
+#https://torrentz2.eu
 site.url=http://seedpeer.eu/,http://www.torrent9.biz/
-site.url.root=http://seedpeer.eu/,http://www.torrent9.biz/,
+site.url.root=http://www.torrent9.biz/,http://seedpeer.eu/,
 logging.file=target/logs/torrentdl.log
 shows.properties.file=shows.properties
 torrent.root.folder=G:/Telechargement/
 torrent.root.folder.new=torrentsNew
 torrent.root.folder.old=torrents
-site.url.search =http://seedpeer.eu/search.php?search=,http://www.torrent9.biz/search_torrent/series/
-site.url.search.vostfr =http://seedpeer.eu/search.php?search=,http://www.torrent9.biz/search_torrent/series/
+site.url.search =http://www.torrent9.biz/search_torrent/series/,http://seedpeer.eu/search.php?search=,
+site.url.search.vostfr =http://www.torrent9.biz/search_torrent/series/,http://seedpeer.eu/search.php?search=,
 
-Cookie = __cfduid=d1c768911d81d215a8dd68d869f1f1bc61479372831; __utma=198467370.91751569.1479372850.1485760815.1485810795.4; __utmz=198467370.1479372850.1.1.utmcsr=cpasbien.cm|utmccn=(referral)|utmcmd=referral|utmcct=/recherche/series/kung%20fu%20panda%20vostfr.html; cf_clearance=2380d53f70a4ef90e8406ca4343cb99816fa1ba9-1487515014-900
