--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #site.url=http://www.cpasbien.cm/derniers-torrents.php?filtre/=series
 #https://torrentz2.eu
-site.url=http://seedpeer.eu/,http://www.torrent9.biz/
-site.url.root=http://www.torrent9.biz/,http://seedpeer.eu/,
+site.url=http://seedpeer.eu/,http://www.torrent9.biz/,https://torrentz2.eu/
+site.url.root=http://www.torrent9.biz/,http://seedpeer.eu/,https://torrentz2.eu/
 logging.file=target/logs/torrentdl.log
 shows.properties.file=shows.properties
 torrent.root.folder=G:/Telechargement/
 torrent.root.folder.new=torrentsNew
 torrent.root.folder.old=torrents
-site.url.search =http://www.torrent9.biz/search_torrent/series/,http://seedpeer.eu/search.php?search=,
-site.url.search.vostfr =http://www.torrent9.biz/search_torrent/series/,http://seedpeer.eu/search.php?search=,
+site.url.search =http://www.torrent9.biz/search_torrent/series/,http://seedpeer.eu/search.php?search=,https://torrentz2.eu/search?f=
+site.url.search.vostfr =http://www.torrent9.biz/search_torrent/series/,http://seedpeer.eu/search.php?search=,https://torrentz2.eu/search?f=
 
