--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,20 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		 <dependency>
+          <groupId>com.codeborne</groupId>
+          <artifactId>phantomjsdriver</artifactId>
+          <version>1.2.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.sun.webkit/webview-deps -->
+<!-- 		<dependency> -->
+<!-- 		    <groupId>com.sun.webkit</groupId> -->
+<!-- 		    <artifactId>webview-deps</artifactId> -->
+<!-- 		    <version>1.3.2</version> -->
+<!-- 		</dependency> -->
+        
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jersey</artifactId>
